Criação da classe usuário, repository e controller.Criado os métodos buscarTodos, por id, atualizar e deletar

--- a/crud-rest-api-springboot-com-docker-e-postgresql/src/main/resources/application.properties
+++ b/crud-rest-api-springboot-com-docker-e-postgresql/src/main/resources/application.properties
@@ -1,3 +1,14 @@
+
+# POSTGRES/DOCKER
+# spring.datasource.url=jdbc:postgresql://localhost:5432/usuario_db
+# spring.datasource.username=william
+# spring.datasource.password=123456
+
+# spring.jpa.hibernate.ddl-auto=create
+# spring.show-sql=true
+
+
+# POSTGRES
 spring.datasource.url= jdbc:postgresql://localhost:5432/crud-rest-api-springboot-com-docker-e-postgresql-db 
 spring.datasource.username=postgres
 spring.datasource.password=123456
@@ -9,4 +20,6 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 
 
-#crud-rest-api-springboot-com-docker-e-postgresql-db
+
+
+
